docs/site: finalize 3-month free trial and 1k/2.5k pricing

--- a/landing-page/public/locales/en.json
+++ b/landing-page/public/locales/en.json
@@ -85,7 +85,7 @@
     },
     "pricing": {
         "title": "Choose your plan",
-        "subtitle": "Transparent pricing tailored to the size of your business.",
+        "subtitle": "3-month free trial on all plans. No commitment.",
         "month": "/month",
         "popular": "Popular",
         "starter": {
