--- a/landing-page/public/locales/fr.json
+++ b/landing-page/public/locales/fr.json
@@ -85,7 +85,7 @@
     },
     "pricing": {
         "title": "Choisissez votre plan",
-        "subtitle": "Des tarifs transparents adaptés à la taille de votre commerce.",
+        "subtitle": "3 mois d'essai gratuit sur tous nos plans. Sans engagement.",
         "month": "/mois",
         "popular": "Populaire",
         "starter": {
